# hotelbook

./: .gitignore  Dockerfile  Makefile  config.yaml.example  docker-compose.yml  pyproject.toml
hotelbooking/: .pre-commit-config.yaml  conftest.py  manage.py  pyproject.toml  pytest.ini
hotelbooking/booking/: models.py  serializer.py  views.py
hotelbooking/booking/migrations/: 0001_initial.py
hotelbooking/booking/tests/: test_booking.py  test_serializers_booking.py
hotelbooking/hotel/: admin.py  models.py  serializer.py  views.py
hotelbooking/hotel/migrations/: 0001_initial.py  0002_alter_hotelroom_description_alter_hotelroom_id.py  0003_alter_hotelroom_id.py  0004_delete_booking.py
hotelbooking/hotel/tests/: test_rooms.py  test_serializers_hotel.py
hotelbooking/hotelbooking/: asgi.py  config.py  settings.py  urls.py  wsgi.py
